--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <div class="flex flex-wrap gap-2 justify-center">
       <!-- Get Free Numbers = opens new page -->
-      <a href="numbers.html"
+      <a href="numbers.virtual"
          class="px-4 py-2 bg-yellow-400 text-black rounded-lg font-semibold text-sm shadow hover:opacity-90">
          ☎️ Get  Numbers
       </a>
